# NVIDIA-LangChain-DocsAgent

./: .gitignore  LICENSE  README.md  requirements.txt
data/: create_db_small_batch.py
data/chroma_small/dc8a8393-366b-4048-8715-289110bb13db/: index_metadata.pickle
data/crawlers/: md-sanitize-helper.py
docs-agent/: README.md  pyproject.toml
docs-agent/app/: server.py
